Added ingredients and steps to lasagna recipe

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,5 +8,25 @@
 </head>
 <body>
     <h1>Lasagna</h1>
+    <img src="https://static.toiimg.com/thumb/55369113.cms?imgsize=392784&width=800&height=800">
+    <h2>Description</h2>
+    <p>This gooey lasagna will transport you to the hills of Tuscany.
+        Pair it with your favorite Chianti and you'll be dreaming of Giuseppes tonight.
+    </p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>Lasagna pasta</li>
+        <li>Tomatoes</li>
+        <li>Mozzarella cheese</li>
+        <li>Carrots</li>
+        <li>Ground beef</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Set oven to 425 degrees Fahrenheit</li>
+        <li>Remove your oven rack and dump all ingredients onto the bottom of the oven</li>
+        <li>Pray to the lasagna gods</li>
+        <li>Enjoy!</li>
+    </ol>
 </body>
 </html>
